--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN" id="img">
 <head>
     <meta name="viewport" content="width=device-width" charset="UTF-8"/>
-    <title>DNF酷狗官网定制</title>
+    <title>艾尚网络游戏科技团队 金典再续</title>
     <link rel="icon" href="images/logo.ico">
     <link rel="stylesheet" type="text/css" href="css/buttons.css">
     <link rel="stylesheet" type="text/css" href="css/showcase.css">
@@ -12,7 +12,7 @@
     </div>
     <div class="tooltips">
 <span>
-<iframe src="https://music.163.com/outchain/player?type=2&id=455710835&auto=1&height=66" width=0 height="0"
+<iframe src="https://music.163.com/outchain/player?type=2&id=1830720523&auto=1&height=66" width=0 height="0"
         frameborder="no" marginwidth="0" marginheight="0"></iframe>
 </span>
     </div>
