--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN" id="img">
 <head>
     <meta name="viewport" content="width=device-width" charset="UTF-8"/>
-    <title>艾尚网络游戏科技团队 金典再续</title>
+    <title>艾尚网络游戏游戏公司</title>
     <link rel="icon" href="images/logo.ico">
     <link rel="stylesheet" type="text/css" href="css/buttons.css">
     <link rel="stylesheet" type="text/css" href="css/showcase.css">
@@ -41,7 +41,7 @@
 <footer id="top_footer">
 <span id="top_copyright">
 <hr class="top_hr_style02">
-<a href="https://lxdun.github.io/taohua/index.html">艾尚官网</a> copyright © 2021 All Rights Reserved.
+<a href="https://lxdun.github.io/taohua/index.html">艾尚网络</a> copyright © 2021 All Rights Reserved.
 </span>
 </footer>
 </body>
