--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         <br><br>
         <div class="showcase-examples l-over l-center">
              <a href="https://u062.com/d/32172262-43548484-ca3a7d" style="color:#FFFFFF;font-weight: bold"
-               class="button button-rounded button-plain button-small-caps button-border" target="_blank">助手全自动</a>
+               class="button button-rounded button-plain button-small-caps button-border" target="_blank">DNF艾尚免费辅助</a>
             <a href="https://u062.com/d/32172262-43548481-499e15" style="color:#FFFFFF;font-weight: bold"
-               class="button button-rounded button-plain button-small-caps button-border" target="_blank">助手半自动</a>
-            <a href="https://qm.qq.com/cgi-bin/qm/qr?k=FvEmBFFwUlDWO9LG6P70voAp3ZkrgG9x&noverify=0" style="color:#FFFFFF;font-weight: bold"
-               class="button button-rounded button-plain button-small-caps button-border" target="_blank">申请代理</a>
-            <a href="https://jq.qq.com/?_wv=1027&k=scWxJ7fJ" style="color:#FFFFFF;font-weight: bold"
-               class="button button-rounded button-plain button-small-caps button-border" target="_blank">售后服务</a>
+               class="button button-rounded button-plain button-small-caps button-border" target="_blank">DNF艾尚市场破解</a>
+            <a href="https://aswt.github.io/s/" style="color:#FFFFFF;font-weight: bold"
+               class="button button-rounded button-plain button-small-caps button-border" target="_blank">艾尚官方85私服</a>
+            <a href="https://aswt.github.io/m/" style="color:#FFFFFF;font-weight: bold"
+               class="button button-rounded button-plain button-small-caps button-border" target="_blank">访问密码：5211</a>
         </div>
     </main>
 </div>
