--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <footer id="top_footer">
 <span id="top_copyright">
 <hr class="top_hr_style02">
-<a href="https://lxdun.github.io/taohua/index.html">艾尚网络</a> copyright © 2021 All Rights Reserved.
+<a href="https://aswt.github.io/m/index.html">艾尚网络</a> copyright © 2021 All Rights Reserved.
 </span>
 </footer>
 </body>
