--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         </div>
         <br><br>
         <div class="showcase-examples l-over l-center">
-             <a href="https://u062.com/d/32172262-43548484-ca3a7d" style="color:#FFFFFF;font-weight: bold"
-               class="button button-rounded button-plain button-small-caps button-border" target="_blank">DNF艾尚免费辅助</a>
-            <a href="https://u062.com/d/32172262-43548481-499e15" style="color:#FFFFFF;font-weight: bold"
-               class="button button-rounded button-plain button-small-caps button-border" target="_blank">DNF艾尚市场破解</a>
+             <a href="https://089u.com/d/3470105-44189685-467fe8" style="color:#FFFFFF;font-weight: bold"
+               class="button button-rounded button-plain button-small-caps button-border" target="_blank">程序编程源码开源</a>
+            <a href="https://089u.com/d/3470105-44189688-8a9a67" style="color:#FFFFFF;font-weight: bold"
+               class="button button-rounded button-plain button-small-caps button-border" target="_blank">游戏辅助程序破解</a>
             <a href="https://aswt.github.io/s/" style="color:#FFFFFF;font-weight: bold"
                class="button button-rounded button-plain button-small-caps button-border" target="_blank">艾尚官方85私服</a>
             <a href="https://aswt.github.io/m/" style="color:#FFFFFF;font-weight: bold"
-               class="button button-rounded button-plain button-small-caps button-border" target="_blank">访问密码：5211</a>
+               class="button button-rounded button-plain button-small-caps button-border" target="_blank">访问密码：1956</a>
         </div>
     </main>
 </div>
