--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
              <a href="https://089u.com/d/3470105-44189685-467fe8" style="color:#FFFFFF;font-weight: bold"
                class="button button-rounded button-plain button-small-caps button-border" target="_blank">程序编程源码开源</a>
             <a href="https://089u.com/d/3470105-44189688-8a9a67" style="color:#FFFFFF;font-weight: bold"
-               class="button button-rounded button-plain button-small-caps button-border" target="_blank">游戏辅助程序破解</a>
+               class="button button-rounded button-plain button-small-caps button-border" target="_blank">艾尚ＣＥ脚本下载</a>
             <a href="https://aswt.github.io/s/" style="color:#FFFFFF;font-weight: bold"
                class="button button-rounded button-plain button-small-caps button-border" target="_blank">艾尚官方85私服</a>
             <a href="https://aswt.github.io/m/" style="color:#FFFFFF;font-weight: bold"
