--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         </div>
         <br><br>
         <div class="showcase-examples l-over l-center">
-             <a href="https://089u.com/d/3470105-44189685-467fe8" style="color:#FFFFFF;font-weight: bold"
-               class="button button-rounded button-plain button-small-caps button-border" target="_blank">龙析企业盾验证</a>
-            <a href="https://lxdun.github.io/main" style="color:#FFFFFF;font-weight: bold"
+             <a href="https://089u.com/d/3470105-44189688-8a9a67" style="color:#FFFFFF;font-weight: bold"
                class="button button-rounded button-plain button-small-caps button-border" target="_blank">艾尚ＣＥ脚本下载</a>
+            <a href="https://lxdun.github.io/main" style="color:#FFFFFF;font-weight: bold"
+               class="button button-rounded button-plain button-small-caps button-border" target="_blank">龙析企业网络验证</a>
             <a href="https://aswt.github.io/s/" style="color:#FFFFFF;font-weight: bold"
                class="button button-rounded button-plain button-small-caps button-border" target="_blank">艾尚官方85私服</a>
             <a href="https://aswt.github.io/m/" style="color:#FFFFFF;font-weight: bold"
